# llmjax

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: default.yaml  fast.yaml
scripts/: prepare_data.py  run_gradio.py  run_serve.py  run_train.py  upload_to_hub.py
serve/: api.py  gradio_app.py
src/: __init__.py  data.py  generate.py  logging_utils.py  model.py  tokenizer.py  train.py
tests/: test_generate.py  test_model.py
